# weavehacks-3

./: .gitignore  PROJECT_DESCRIPTION.md  README.md
backend/: .env.example  README.md  main.py  models.py  pyproject.toml  redis_setup.py
backend/agent/: __init__.py  fix_agent.py  repo.py
backend/classify/: __init__.py  classifier.py  prompts.py
backend/github/: issue_formatter.py
backend/ingest/: cluster.py
backend/learning/: __init__.py  similar_fixes.py
backend/llm/: __init__.py  base.py  openai.py
backend/scrapers/: __init__.py  base.py  reddit.py  web.py
backend/tasks/: __init__.py  storage.py
backend/webhooks/: __init__.py  github.py
backend/workers/: __init__.py  classify_worker.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: code-mutator-dashboard.tsx  dna-helix.tsx
frontend/components/ui/: badge.tsx  breadcrumb.tsx  calendar.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  menubar.tsx  pagination.tsx  select.tsx  sidebar.tsx
scripts/: reset-demo.sh
