[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=5.0.0",
    "sentence-transformers>=3.0.0",
    "stagehand>=3.5.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
